--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "uuid": "^13.0.0",
-    "recharts": "^3.4.1"
+    "recharts": "^3.4.1",
+    "@vitejs/plugin-react": "^5.1.1",
+    "vite": "^7.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
