--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,7 @@ fastapi==0.109.2
 uvicorn==0.27.1
 pydantic==2.6.1
 python-multipart==0.0.9
+sqlalchemy==2.0.27
+alembic==1.13.1
+aiosqlite==0.19.0
+cryptography==42.0.5
